[SELC-7737] feat: modify addMembersToUserGroupWithParentInstitutionId to create a group if it doesn't exist (#305)