@@ -1,10 +1,7 @@
 package it.pagopa.selfcare.user_group.model.mapper;
 
 import it.pagopa.selfcare.user_group.api.UserGroupOperations;
-import it.pagopa.selfcare.user_group.model.CreateUserGroupDto;
-import it.pagopa.selfcare.user_group.model.GroupDto;
-import it.pagopa.selfcare.user_group.model.UpdateUserGroupDto;
-import it.pagopa.selfcare.user_group.model.UserGroupResource;
+import it.pagopa.selfcare.user_group.model.*;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.Named;
@@ -20,31 +17,25 @@ public interface UserGroupMapper {
     @Mapping(source = ".", target = "members", qualifiedByName = "getMembersUUID")
     UserGroupResource toResource(UserGroupOperations entity);
 
-    @Mapping(source = ".", target = "members", qualifiedByName = "getMembers")
+    @Mapping(target = "members", expression = "java(getMembers(dto.getMembers()))")
     GroupDto fromDto(CreateUserGroupDto dto);
 
-    @Mapping(source = ".", target = "members", qualifiedByName = "getOperationMembers")
+    @Mapping(target = "members", expression = "java(getMembers(dto.getMembers()))")
     GroupDto toUserGroupOperations(UpdateUserGroupDto dto);
+
+    @Mapping(target = "members", expression = "java(getMembers(dto.getMembers()))")
+    GroupDto toUserGroupOperations(AddMembersToUserGroupDto dto);
 
     @Named("getMembersUUID")
     default List<UUID> getMembersUUID(UserGroupOperations entity) {
         return entity.getMembers()
                 .stream()
                 .map(UUID::fromString)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Named("getMembers")
-    default Set<String> getMembers(CreateUserGroupDto entity) {
-        return entity.getMembers()
-                .stream()
-                .map(UUID::toString)
-                .collect(Collectors.toSet());
-    }
-
-    @Named("getOperationMembers")
-    default Set<String> getOperationMembers(UpdateUserGroupDto entity) {
-        return entity.getMembers()
+    default Set<String> getMembers(Set<UUID> members) {
+        return members
                 .stream()
                 .map(UUID::toString)
                 .collect(Collectors.toSet());
